--- a/LoginTransitionApplicationSolution/Data/Account.DTI/Account.DTI.csproj
+++ b/LoginTransitionApplicationSolution/Data/Account.DTI/Account.DTI.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <ProjectReference Include="..\..\..\Framework\FrameworkProjects\DataTrasferObjectInterfaces\DataTrasferObjectInterfaces.csproj" />
+    <ProjectReference Include="..\Account.CoreComponents\Account.CoreComponents.csproj" />
   </ItemGroup>
 
 </Project>
