--- a/LoginTransitionApplicationSolution/Models/Account.MOD/Account.MOD.csproj
+++ b/LoginTransitionApplicationSolution/Models/Account.MOD/Account.MOD.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <ProjectReference Include="..\..\Data\Account.DTO\Account.DTO.csproj" />    <ProjectReference Include="..\Account.INT\Account.INT.csproj" />
   </ItemGroup>
 
 </Project>
