File tree structured

--- a/LoginTransitionApplicationSolution/ServiceProjects/Builder/Builder.csproj
+++ b/LoginTransitionApplicationSolution/ServiceProjects/Builder/Builder.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Framework\DataTransferObjects\DataTransferObjects.csproj" />
+  </ItemGroup>
+
 </Project>
