--- a/LoginTransitionApplicationSolution/Data/Account.DTO/Account.DTO.csproj
+++ b/LoginTransitionApplicationSolution/Data/Account.DTO/Account.DTO.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Framework\FrameworkProjects\DataTransferObjects\DataTransferObjects.csproj" />
+    <ProjectReference Include="..\..\Framework\DataTransferObjects\DataTransferObjects.csproj" />
     <ProjectReference Include="..\Account.CoreComponents\Account.CoreComponents.csproj" />
     <ProjectReference Include="..\Account.DTI\Account.DTI.csproj" />
   </ItemGroup>
